Mon Jul 11 21:08:17 2005  Boris Kolpackov  <boris@kolpackov.net>

	* orbsvcs/examples/Notify/Federation/Gate/Export.h:
	* orbsvcs/examples/Notify/Federation/Gate/Gate.h:
	* orbsvcs/examples/Notify/Federation/Gate/Gate.mpc:

	Added export macro.

Mon Jul 11 09:07:26 2005  Justin Michel  <michel_j@ociweb.com>

        * orbsvcs/orbsvcs/Notify/Admin.cpp:

          Add missing include of Event_Manager.h

Mon Jul 11 07:23:49 2005  Chad Elliott  <elliott_c@ociweb.com>

        * tests/Nested_Upcall_Crash/Nested_Upcall_Crash.mpc:

          Set the stack size for windows based project types to 16Mb to
          allow this test to complete on Windows.

Mon Jul 11 11:12:42 2005  Boris Kolpackov  <boris@kolpackov.net>

        * orbsvcs/examples/Notify/Federation/Agent/Agent.cpp:
        * orbsvcs/examples/Notify/Federation/SpaceCraft/SpaceCraft.cpp:

          Add explicit return statements to main (which is renamed
          to ace_main_i and, as a result, doesn't have proper main
          semantics).

Mon Jul 11 08:37:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Portable_Interceptors/ForwardRequest/PI_ForwardRequest.mpc:
          Removed not needed base projects

Mon Jul 11 08:08:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2183_Regression/Bug_2183_Regression.mpc:
          Simplified this mpc file

        * tests/Bug_2174_Regression/*:
          New regression for bug 2174. _non_existent should return
          true/false, not raise OBJECT_NOT_EXIST. Thanks to
          Torsten Kuepper <torsten dot kuepper at nokia dot com>
          for making this regression. The bugfix for this will follow
          later this week.

Fri Jul  8 12:59:38 2005  Chad Elliott  <elliott_c@ociweb.com>

        * tests/GIOP_Fragments/PMB_With_Fragments/dribble.pl:

          Added a sleep(1) at the end of this script to allow the socket to
          get flushed before the process exits.  On windows, the socket data